--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -652,6 +652,7 @@ $form-check-disabled-color:     $component-disabled-color !default;
 $form-check-inline-input-margin-x: .3125rem !default;
 
 $form-group-margin-bottom:      1rem !default;
+$form-row-gutter:               .3125rem !default;
 
 $input-group-addon-color:        $input-color !default;
 $input-group-addon-bg:           $uibase-50 !default;
