--- a/docs/assets/css/docs-rtl.css
+++ b/docs/assets/css/docs-rtl.css
@@ -1024,20 +1024,12 @@ h4 > code {
   margin-top: .5rem;
 }
 
-.custom-file-control:lang(en):empty::before {
+.custom-file-input:lang(en) ~ .custom-file-label::after {
   content: "Browse";
 }
 
-.custom-file-control:lang(es):empty::before {
-  content: "Navegar";
-}
-
-.custom-file-control:lang(en):empty::after {
-  content: "Choose file...";
-}
-
-.custom-file-control:lang(es):empty::after {
-  content: "Seleccionar archivo...";
+.custom-file-input:lang(es) ~ .custom-file-label::after {
+  content: "Elegir";
 }
 
 .cf-example > .btn-group + .btn-group,
