--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -32,27 +32,27 @@ $palette-interval-dark:     .15% !default;
 //  level < 0 = #fff
 //  level > 1000 = #000
 $level-control: (
-    "bg":                           500,
-    "color":                        -1,
-    "border-color":                 600,
-    "hover-bg":                     600,
-    "hover-color":                  -1,
-    "hover-border-color":           700,
-    "active-hover-bg":              700,
-    "active-hover-color":           -1,
-    "active-hover-border-color":    700
+    "bg":                   500,
+    "color":                -1,
+    "border-color":         600,
+    "hover-bg":             600,
+    "hover-color":          -1,
+    "hover-border-color":   700,
+    "active-bg":            700,
+    "active-color":         -1,
+    "active-border-color":  700
 ) !default;
 
 $level-context: (
-    "bg":                           100,
-    "color":                        800,
-    "border-color":                 200,
-    "hover-bg":                     200,
-    "hover-color":                  900,
-    "hover-border-color":           300,
-    "active-hover-bg":              200,
-    "active-hover-color":           900,
-    "active-hover-border-color":    300
+    "bg":                   100,
+    "color":                800,
+    "border-color":         200,
+    "hover-bg":             200,
+    "hover-color":          900,
+    "hover-border-color":   300,
+    "active-bg":            300,
+    "active-color":         900,
+    "active-border-color":  300
 ) !default;
 
 
@@ -383,7 +383,6 @@ $component-action-hover-color:  $uibase-800 !default;
 $component-active-bg:           $primary !default;
 $component-active-color:        color-if-contrast($white, $primary) !default;
 $component-active-border-color: palette($primary, 600) !default;
-$component-active-hover-bg:     palette($primary, 600) !default;
 
 $component-disabled-color:      $uibase-300 !default;
 $component-disabled-bg:         transparent !default;
@@ -597,7 +596,11 @@ $btn-line-height:           1.5 !default;
 $btn-border-width:          $border-width !default;
 $btn-border-radius:         $border-radius !default;
 $btn-box-shadow:            inset 0 .125em .25em rgba($white, .25), 0 .125em .125em rgba($black, .075) !default;
-$btn-active-box-shadow:     inset 0 .125em .25em rgba($black, .125), $btn-box-shadow !default;
+$btn-active-box-shadow:     inset 0 .25em .3125em rgba($black, .125) !default;
+
+$btn-focus-box-shadow-width:  .1875rem !default;
+$btn-focus-box-shadow-alpha:  .35 !default;
+$btn-focus-box-shadow:        0 0 0 $btn-focus-box-shadow-width rgba($component-active-bg, $btn-focus-box-shadow-alpha) !default;
 
 $btn-outline-bg:            transparent !default;
 
@@ -608,12 +611,13 @@ $btn-block-spacing-y:       .25rem !default;
 $btn-default-bg:                    $white !default;
 $btn-default-color:                 color-if-contrast($uibase-500, $btn-default-bg) !default;
 $btn-default-border-color:          $uibase-300 !default;
+$btn-default-focus-box-shadow-color: $component-active-bg !default;
 $btn-default-hover-bg:              $uibase-100 !default;
 $btn-default-hover-color:           color-if-contrast($uibase-600, $btn-default-hover-bg) !default;
 $btn-default-hover-border-color:    $uibase-400 !default;
-$btn-default-active-hover-bg:       $uibase-200 !default;
-$btn-default-active-hover-color:    color-if-contrast($btn-default-hover-color, $btn-default-active-hover-bg) !default;
-
+$btn-default-active-bg:             $uibase-200 !default;
+$btn-default-active-color:          color-if-contrast($btn-default-hover-color, $btn-default-active-bg) !default;
+$btn-default-active-border-color:   $uibase-400 !default;
 
 // Forms
 // =====
@@ -634,7 +638,7 @@ $input-focus-color:             $input-color !default;
 $input-focus-bg:                $input-bg !default;
 $input-focus-border-color:      palette($primary, 300) !default;
 $input-focus-box-shadow-width:  .1875rem !default;
-$input-focus-box-shadow-alpha:  .25 !default;
+$input-focus-box-shadow-alpha:  .35 !default;
 $input-focus-box-shadow:        0 0 0 $input-focus-box-shadow-width rgba($component-active-bg, $input-focus-box-shadow-alpha) !default;
 
 $input-disabled-color:          $component-disabled-color !default;
@@ -1100,8 +1104,8 @@ $slider-thumb-width:                1.25rem !default;
 $slider-thumb-height:               1.25rem !default;
 $slider-thumb-border-radius:        50% !default;
 
-$slider-thumb-min-bg:               $component-active-bg !default;
-$slider-thumb-min-hover-bg:         $component-active-hover-bg !default;
+$slider-thumb-min-bg:               $primary !default;
+$slider-thumb-min-hover-bg:         palette($primary, 600) !default;
 $slider-thumb-max-bg:               $danger !default;
 $slider-thumb-max-hover-bg:         palette($danger, 600) !default;
 
