--- a/scss/component/_input-group.scss
+++ b/scss/component/_input-group.scss
@@ -129,6 +129,11 @@
             padding-right: $sz-padding-x;
             padding-left: $sz-padding-x;
         }
+
+        .input-group-#{$size} > .input-group-addon > .btn-icon {
+            padding-right: $sz-padding-x * $btn-icon-multiplier;
+            padding-left: $sz-padding-x * $btn-icon-multiplier;
+        }
     }
 }
 
