--- a/docs/assets/css/docs-rtl.css
+++ b/docs/assets/css/docs-rtl.css
@@ -584,7 +584,7 @@ h4 > code {
   color: #fff;
 }
 
-.topLink .caret {
+.topLink .caret::after {
   border-top: 0;
   border-bottom: 0.3125rem solid;
 }
@@ -1120,18 +1120,7 @@ h4 > code {
   height: 19em;
 }
 
-.cf-example-dropdown > .dropdown::after {
-  display: block;
-  clear: both;
-  content: "";
-}
-
-.cf-example-dropdown > .dropdown > .dropdown-toggle {
-  float: right;
-}
-
 .cf-example-dropdown > .dropdown > .dropdown-menu {
-  position: static;
   display: block;
   margin-bottom: .25rem;
   clear: right;
